# ansible-role-jenkins-job-builder

./: .gitreview  README.md  README.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yaml
doc/source/: conf.py
files/etc/jenkins_jobs/config/: README  README.rst
handlers/: main.yaml
meta/: main.yml
tasks/: config.yaml  install.yaml  main.yaml
tasks/install/: debian.yaml  git.yaml  package.yaml  pip.yaml  redhat.yaml
templates/etc/jenkins_jobs/: jenkins_jobs.ini.j2
tests/: inventory  test.yaml
tests/files/etc/jenkins_jobs/: jenkins_jobs.ini
vars/: Debian.yaml  RedHat.yaml
